<resources>
    <string name="app_name">iHermit</string>
    <string name="email_address_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="auth_btn">Continue</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_title">To continue, we need your location</string>
    <string name="location_rationale">Your privacy is very important to us. We use your location to set a reference for where you will be staying at home and the app will periodically check your current location against that location. Your location data will not leave your device and we don\'t store any of your location data.</string>
    <string name="location_permission">Grant permission</string>
    <string name="home_set">Use this as my home location</string>
    <string name="current_streak">Your current streak</string>
    <string name="current_streak_home">of staying at home</string>
    <string name="tab_achievements">Achievements</string>
    <string name="tab_leaderboard">Leaderboard</string>
    <string name="setup_nick_name_hint">Set up your display name</string>
    <string name="nick_name_hint">Display Name</string>
    <string name="setup_nick_name_button">Continue</string>
    <string name="progress_text_format">%1$d/%2$d</string>
    <string name="logout">Logout</string>
    <plurals name="streak_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="user_progress">Level %1$d: %2$s | %3$d pts</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="tracker_in_progress_description">Checking for location…</string>
    <string name="tracker_title">@string/app_name</string>
    <string name="please_accept_permission">This app needs to access your location to work.</string>
    <string name="achievement_title">Achievement</string>
    <string name="achievement_unlocked_title">Achievement Unlocked</string>
    <string name="achievement_dismiss_btn_text">Dismiss</string>
    <string name="achievement_ok_btn_text">Nice</string>
    <string name="achievement_ok_btn_text_editable">I\'ve completed this</string>
    <string name="breach_dialog_title">Breach detected</string>
    <string name="breach_dialog_cancel_btn_title">I broke quarantine</string>
    <string name="breach_dialog_ok_btn_title">I had a good reason</string>
    <string name="breach_dialog_description">We detected that you left the perimeter of your house at %1$s</string>
    <string name="breach_dialog_name">Did you leave your home?</string>
    <string name="challenge_of_the_day">Challenge of the day</string>
    <string name="leaderboard_coming_soon">Leaderboard coming soon!</string>
    <string name="login_subtitle">To get started, enter your email address and password</string>
    <string name="login_title">Let\'s log in</string>
    <string name="nick_name_title">Your profile</string>
    <string name="first_title">Hi there</string>
    <string name="first_description_one">so you can’t wait to see your friends again but because of the virus you can’t? Let’s save the world together alone…</string>
    <string name="first_description_two">by staying at home.</string>
    <string name="sign_me_up">Sign me up!</string>
</resources>
